Remove Show/Hide Available media
These seem to make things harder to get at for no real gain so we are
removing them from the UI.

--- a/html/controls/media_management.css
+++ b/html/controls/media_management.css
@@ -55,10 +55,11 @@
   table.Type.Hide tr:not(.Type)>th { display: none; }
   table.Type.Hide tr:not(.Type)>td { display: none; }
 
-  /* Show/Hide Available media */
+  /* Show/Hide Available media
   table.Type:not(.ShowAvailable) tr.Type>th.Type>button.AvailableControl { display: none; }
   table.Type.ShowAvailable tr.Type>th.Type>button.ShowAvailable { display: none; }
   table.Type:not(.ShowAvailable) tr.Available>td { display: none; }
+  */
 
   /* Show/Hide Preview buttons/elements */
   table.Type tr.Item>td.Preview:not(.Show)>:not(button) { display: none; }
