--- a/html/views/wo.css
+++ b/html/views/wo.css
@@ -13,7 +13,8 @@ body { background-color: #0f0; }
 img { position: absolute; }
 div { position: absolute; }
 
-.Full { width: 100%; top: 82.4%; }
+div.Full { width: 100%; height: 100%; }
+img.Bar { width: 100%; top: 82.4%; }
 
 #WftdaMain { z-index:100; }
 
