Overlay wo: Fix clock-showing logic, now that intermission clock is again in period clock's location.

--- a/html/views/wo.html
+++ b/html/views/wo.html
@@ -36,22 +36,22 @@
       <a><span class="Name">P</span><span class="Number"></span></a>
     </div>
     <div id="ClockPeriodTime" class="noBack">
-      <a class="ClockP"></a>
+      <a class="ClockPI"></a>
     </div>
     <div id="ClockIntermissionTime" class="noBack">
-      <a class="ClockJLTI"></a>
+      <a class="ClockPI"></a>
     </div>
     <div id="ClockJamTime" class="noBack">
-      <a class="ClockJLTI"></a>
+      <a class="ClockJLT"></a>
     </div>
     <div id="ClockLineupTime" class="noBack">
-      <a class="ClockJLTI"></a>
+      <a class="ClockJLT"></a>
     </div>
     <div id="ClockTimeoutTime" class="noBack">
-      <a class="ClockJLTI"></a>
+      <a class="ClockJLT"></a>
     </div> 
     <div id="ClockJamNumber" class="noBack">
-      <a class="ClockJN"><span class="Name">J</span><span class="Number"></span></a>
+      <a><span class="Name">J</span><span class="Number"></span></a>
     </div>
   </div>
 
