Update index page with links to WFTDA overlay

--- a/html/views/wo.html
+++ b/html/views/wo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Strict//EN">
-<html><head><title>CRG SB Overlay</title>
+<html><head><title>WFTDA CRG SB Overlay</title>
 
 <!--
  Copyright (C) 2008-2013 Mr Temper <MrTemper@CarolinaRollergirls.com>, Rob Thomas, and WrathOfJon <crgscorespam@sacredregion.com>
