--- a/html/controls/mobile.css
+++ b/html/controls/mobile.css
@@ -14,6 +14,11 @@
 	span.ClockBubble.Running { background: rgba(0, 255, 0, 0.5); }
 /* END ClockBubbles */
 
+/* Alternate Names */
+	.HasAlternateName>.Name { display: none; }
+	:not(.HasAlternateName)>.AlternateName { display: none; }
+/* END Alternate Names */
+
 
 /* JamControlPage */
 	#JamControlPage div { text-align: center; }
