--- a/html/views/wg.html
+++ b/html/views/wg.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Strict//EN">
-<html><head><title>WFTDA CRG SB Overlay</title>
+<html><head><title>CRG SB Overlay</title>
 
 <!--
  Copyright (C) 2008-2013 Mr Temper <MrTemper@CarolinaRollergirls.com>, Rob Thomas, and WrathOfJon <crgscorespam@sacredregion.com>
@@ -18,17 +18,17 @@
 
 <body>
 <div id="mainDiv">
-  <div id="WftdaMain" class="Full"><img class="Bar" src="/views/images/wo/wftda_overlay_main.png"/></div>
-  <div id="WftdaT1LD" class="Full"><img class="Bar" src="/views/images/wo/wftda_overlay_t1_lead.png"/></div>
-  <div id="WftdaT1OR" class="Full"><img class="Bar" src="/views/images/wo/wftda_overlay_t1_or.png"/></div>
-  <div id="WftdaT1T1" class="Full"><img class="Bar" src="/views/images/wo/wftda_overlay_t1_to1.png"/></div>
-  <div id="WftdaT1T2" class="Full"><img class="Bar" src="/views/images/wo/wftda_overlay_t1_to2.png"/></div>
-  <div id="WftdaT1T3" class="Full"><img class="Bar" src="/views/images/wo/wftda_overlay_t1_to3.png"/></div>
-  <div id="WftdaT2LD" class="Full"><img class="Bar" src="/views/images/wo/wftda_overlay_t2_lead.png"/></div>
-  <div id="WftdaT2OR" class="Full"><img class="Bar" src="/views/images/wo/wftda_overlay_t2_or.png"/></div>
-  <div id="WftdaT2T1" class="Full"><img class="Bar" src="/views/images/wo/wftda_overlay_t2_to1.png"/></div>
-  <div id="WftdaT2T2" class="Full"><img class="Bar" src="/views/images/wo/wftda_overlay_t2_to2.png"/></div>
-  <div id="WftdaT2T3" class="Full"><img class="Bar" src="/views/images/wo/wftda_overlay_t2_to3.png"/></div>
+  <div id="WftdaMain" class="Full"><img class="Bar" src="/views/images/wg/wftda_overlay_main.png"/></div>
+  <div id="WftdaT1LD" class="Full"><img class="Bar" src="/views/images/wg/wftda_overlay_t1_lead.png"/></div>
+  <div id="WftdaT1OR" class="Full"><img class="Bar" src="/views/images/wg/wftda_overlay_t1_or.png"/></div>
+  <div id="WftdaT1T1" class="Full"><img class="Bar" src="/views/images/wg/wftda_overlay_t1_to1.png"/></div>
+  <div id="WftdaT1T2" class="Full"><img class="Bar" src="/views/images/wg/wftda_overlay_t1_to2.png"/></div>
+  <div id="WftdaT1T3" class="Full"><img class="Bar" src="/views/images/wg/wftda_overlay_t1_to3.png"/></div>
+  <div id="WftdaT2LD" class="Full"><img class="Bar" src="/views/images/wg/wftda_overlay_t2_lead.png"/></div>
+  <div id="WftdaT2OR" class="Full"><img class="Bar" src="/views/images/wg/wftda_overlay_t2_or.png"/></div>
+  <div id="WftdaT2T1" class="Full"><img class="Bar" src="/views/images/wg/wftda_overlay_t2_to1.png"/></div>
+  <div id="WftdaT2T2" class="Full"><img class="Bar" src="/views/images/wg/wftda_overlay_t2_to2.png"/></div>
+  <div id="WftdaT2T3" class="Full"><img class="Bar" src="/views/images/wg/wftda_overlay_t2_to3.png"/></div>
 
   <div id="StatusBar" class="noBack"><a></a></div>
   <div id="TopBar">
@@ -49,17 +49,16 @@
     </div>
     <div id="ClockTimeoutTime" class="noBack">
       <a class="ClockJLT"></a>
-    </div> 
+    </div>
     <div id="ClockJamNumber" class="noBack">
       <a><span class="Name">J</span><span class="Number"></span></a>
     </div>
   </div>
 
   <div id="BottomBarFullWidth">
-    <div id="Team1Logo" class="logos"><img></img></div>
-    <div id="Team2Logo" class="logos"><img></img></div>   
+    <div id="OverlayLogo"><img class="logoscale"></img></div>
   </div>
- 
+
   <div id="BottomBar">
     <div id="Team1TimeOuts" class="TimeOuts"><a></a></div>
     <div id="Team1Name" class="noBack" ><a class="Name"></a><a class="AlternateName"></a></div>
