--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -50,6 +50,7 @@ table.RowTable { border-spacing: 0px; }
 
 	#TeamTime table.Team>tbody>tr>td { width: 50%; }
 	#TeamTime table.Team tr.Name td.Name div { max-height: 100px; max-width: 300px; overflow: hidden; font-size: 150%; }
+	#TeamTime table.Team tr.Name td.Name div a.AlternateName { display: none; }
 	#TeamTime table.Team tr.Name td.Logo img { height: 50px; vertical-align: middle; }
 	#TeamTime table.Team tr.Score td.Score a { font-size: 300%; }
 	#TeamTime table.Team tr.Score td.Score a.Change { font-size: 200%; line-height: 175%; }
