--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -38,6 +38,15 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
   background: -webkit-gradient(linear, 0 0, 0 100%, from(#000000), color-stop(50%, #222222), color-stop(100%, #777777));
 }
 
+#sbDiv.invert {
+  background: -moz-linear-gradient(top, #C0C0C0, #222222 50%, #000000 100%);
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#C0C0C0), color-stop(50%, #222222), color-stop(100%, #000000));
+}
+    
+#sbDiv.flatblack {
+  background: #000000;
+}
+    
 /* Views */
   #imageDiv>img { width: 100%; height: 100%; }
   #videoDiv>video { width: 100%; height: 100%; }
