--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -53,7 +53,8 @@ table.RowTable { border-spacing: 0px; }
 	#TeamTime table.Team tr.Name td.Name div a.AlternateName { display: none; }
 	#TeamTime table.Team tr.Name td.Logo img { height: 50px; vertical-align: middle; }
 	#TeamTime table.Team tr.Score td.Score a { font-size: 300%; }
-	#TeamTime table.Team tr.Score td.Score a.Change { font-size: 200%; line-height: 175%; }
+	#TeamTime table.Team tr.Score td a.Change { font-size: 200%; line-height: 175%; }
+	#TeamTime table.Team tr.Score td a.JamScore { font-size: 200%; line-height: 175%; }
 	#TeamTime table.Team tr.Timeout td.Timeouts a { font-size: 200%; }
 	#TeamTime table.Team tr.Timeout td.OfficialReviews a { font-size: 200%; }
 	#TeamTime table.Team tr.Jammer td.Jammer:not(.ByName) select.Jammer.ByName { display: none; }
