--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -71,6 +71,8 @@ table.RowTable { border-spacing: 0px; }
 	#TeamTime table.Time tr.Number td.Number a { font-size: 150%; }
 	#TeamTime table.Time tr.Time td.Time a { font-size: 200%; }
 	#TeamTime table.Time tr.TimeSet td.Button button>span { padding: 0.3em .6em; }
+
+	#TeamTime .JamScoreButton { font-size: 80%; }
 /* End Team/Time Tab */
 
 /* Policies */
