--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -14,12 +14,13 @@
 		<script type="text/javascript" src="/javascript/scoreboard.js"></script>
 		<link href="scoreboard.css" type="text/css" rel="stylesheet" />
 	</head>
-	<body class=" hasGoogleVoiceExt">
+	<body>
 		<div id="mainDiv">
 			<div id="sbDiv" class="Scoreboard View">
-				<div id="SponsorBox" class="ClockAnimation">
+				<div id="SponsorBox" class="Clock ShowLineup ShowTimeout">
 					<div class="NextImg"><img src="" style="display: none;" /></div>
 					<div class="CurrentImg"><img src="" style="display: none;" /></div>
+					<div class="FinishedImg"><img src="" style="display: none;" /></div>
 				</div>
 
 				<!-- Jam Totals -->
@@ -29,30 +30,22 @@
 						<div class="Timeout1 Dot"></div>
 						<div class="Timeout2 Dot"></div>
 						<div class="Timeout3 Dot"></div>
-						<div class="Timeout1 Dot Active"></div>
-						<div class="Timeout2 Dot Active"></div>
-						<div class="Timeout3 Dot Active"></div>
 					</div>
 					<div class="Team Team2 Number WhiteBox"></div>
 					<div class="Team Team2 Number TextContainer">
 						<div class="Timeout1 Dot"></div>
 						<div class="Timeout2 Dot"></div>
 						<div class="Timeout3 Dot"></div>
-						<div class="Timeout1 Dot Active"></div>
-						<div class="Timeout2 Dot Active"></div>
-						<div class="Timeout3 Dot Active"></div>
 					</div>
 				</div>
 				<div class="JamTotals OfficialReviews">
 					<div class="Team Team1 Number WhiteBox"></div>
 					<div class="Team Team1 Number TextContainer">
 						<div class="OfficialReview Dot"></div>
-						<div class="OfficialReview Dot Active"></div>
 					</div>
 					<div class="Team Team2 Number WhiteBox"></div>
 					<div class="Team Team2 Number TextContainer">
 						<div class="OfficialReview Dot"></div>
-						<div class="OfficialReview Dot Active"></div>
 					</div>
 				</div>
 				<div class="JamTotals JamPoints">
@@ -90,46 +83,26 @@
 					<div class="Team Team2 Number TextContainer"><a class="Number"></a></div>
 				</div>
 				<div class="Team Team1">
-					<div class="TeamAnimationQueue"></div>
-					<div class="TeamAnimationFlag"></div>
-					<div class="Name TextContainer"><a class="Name"></a></div>
-					<div class="Logo">
-						<div class="Inner"><img class="Logo" /></div>
+					<div class="NameLogo">
+						<div class="Name TextContainer"><a class="Name"></a></div>
+						<div class="Logo"><img class="Logo" /></div>
 					</div>
 					<div class="Score WhiteBox"></div>
 					<div class="Score TextContainer"><a class="Score"></a></div>
-					<div class="Jammer ClockAnimation">
-						<div class="TextContainer"><a class="Jammer"></a></div>
-					</div>
-					<div class="Jammer ClockAnimation">
-						<div class="TextContainer"><a class="Pulse" style="opacity: 0;"></a></div>
-					</div>
-					<div class="Lead ClockAnimation">
-						<div class="TextContainer"><a class="Lead">Lead</a></div>
-					</div>
+					<div class="Clock ShowJam Jammer TextContainer"><a class="Jammer"></a></div>
+					<div class="Clock ShowJam Lead TextContainer"><a class="Lead">Lead</a></div>
 				</div>
 				<div class="Team Team2">
-					<div class="TeamAnimationQueue"></div>
-					<div class="TeamAnimationFlag"></div>
-					<div class="Name TextContainer"><a class="Name"></a></div>
-					<div class="Logo">
-						<div class="Inner"><img class="Logo" /></div>
+					<div class="NameLogo">
+						<div class="Name TextContainer"><a class="Name"></a></div>
+						<div class="Logo"><img class="Logo" /></div>
 					</div>
 					<div class="Score WhiteBox"></div>
 					<div class="Score TextContainer"><a class="Score"></a></div>
-					<div class="Jammer ClockAnimation">
-						<div class="TextContainer"><a class="Jammer"></a></div>
-					</div>
-					<div class="Jammer ClockAnimation">
-						<div class="TextContainer"><a class="Pulse" style="opacity: 0;"></a></div>
-					</div>
-					<div class="Lead ClockAnimation">
-						<div class="TextContainer"><a class="Lead">Lead</a></div>
-					</div>
+					<div class="Clock ShowJam Jammer TextContainer"><a class="Jammer"></a></div>
+					<div class="Clock ShowJam Lead TextContainer"><a class="Lead">Lead</a></div>
 				</div>
-				<div class="ClockAnimationQueue"></div>
-				<div class="ClockAnimationFlag ClockAnimation"></div>
-				<div class="Period Clock ClockAnimation">
+				<div class="Period Clock ShowJam">
 					<div class="Name WhiteBox FlatBottom FlatDark"></div>
 					<div class="Name TextContainer FlatDark">
 						<a><span class="Name">Period</span><span class="space"> </span><span class="Number"></span></a>
@@ -138,14 +111,14 @@
 					<div class="Time WhiteBox FlatTop"></div>
 					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
 				</div>
-				<div class="Period_small Clock ClockAnimation">
+				<div class="Period_small Clock ShowLineup ShowTimeout">
 					<div class="Name WhiteBox"></div>
 					<div class="Name TextContainer"><a><span class="Name">P</span><span class="Number"></span></a></div>
 					<div class="Overtime Name TextContainer"><a><span>OT</span></a></div>
 					<div class="Time WhiteBox"></div>
 					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
 				</div>
-				<div class="Jam Clock ClockAnimation">
+				<div class="Jam Clock ShowJam">
 					<div class="Name WhiteBox FlatBottom FlatDark"></div>
 					<div class="Name TextContainer FlatDark">
 						<a><span class="Name">Jam</span><span class="space"> </span><span class="Number"></span></a>
@@ -153,23 +126,25 @@
 					<div class="Time WhiteBox FlatTop"></div>
 					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
 				</div>
-				<div class="Jam_small Clock ClockAnimation">
+				<div class="Jam_small Clock ShowLineup ShowTimeout">
 					<div class="Name WhiteBox"></div>
 					<div class="Name TextContainer"><a><span class="Name">J</span><span class="Number"></span></a></div>
 				</div>
-				<div class="Lineup Clock ClockAnimation">
-					<div class="Name WhiteBox"></div>
-					<div class="Name TextContainer"><a><span class="Name">Line Up</span></a></div>
-					<div class="Time WhiteBox"></div>
-					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
+				<div class="LineupTimeout Clock ShowLineup ShowTimeout">
+					<div class="Lineup Clock ShowLineup">
+						<div class="Name WhiteBox"></div>
+						<div class="Name TextContainer"><a><span class="Name">Line Up</span></a></div>
+						<div class="Time WhiteBox"></div>
+						<div class="Time TextContainer"><a><span class="Time"></span></a></div>
+					</div>
+					<div class="Timeout Clock ShowTimeout">
+						<div class="Name WhiteBox"><div class="RedBox full"></div></div>
+						<div class="Name TextContainer"><a><span class="Name">Time Out</span></a></div>
+						<div class="Time WhiteBox"></div>
+						<div class="Time TextContainer"><a><span class="Time"></span></a></div>
+					</div>
 				</div>
-				<div class="Timeout Clock ClockAnimation">
-					<div class="Name WhiteBox"><div class="RedBox full"></div></div>
-					<div class="Name TextContainer"><a><span class="Name">Time Out</span></a></div>
-					<div class="Time WhiteBox"></div>
-					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
-				</div>
-				<div class="Intermission Clock ClockAnimation">
+				<div class="Intermission Clock ShowIntermission">
 					<div class="Name WhiteBox"></div>
 					<div class="Name TextContainer">
 						<a>
