--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -133,6 +133,7 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
   .Dot, .Dot.Active { border-radius: 100%; }
   .Dot { background: #000000; }
   .Dot.Active { background: #000000; opacity: 0; animation: DotActive 0.75s infinite; -moz-animation: DotActive 0.75s infinite; -webkit-animation: DotActive 0.75s infinite; }
+  body.MinAnimations .Dot.Active { background: #000000; opacity: 0; animation: DotActive 0.75s infinite steps(4); -moz-animation: DotActive 0.75s infinite steps(4); -webkit-animation: DotActive 0.75s infinite steps(4); }
   .Dot.Used { opacity: 0; }
     @-moz-keyframes DotActive    {  0% { opacity: 1; } 50% { opacity: 0; } 100% { opacity: 1; } }
     @-webkit-keyframes DotActive {  0% { opacity: 1; } 50% { opacity: 0; } 100% { opacity: 1; } }
@@ -364,6 +365,8 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
     @-moz-keyframes FinishedImg { from { right: 0%; } to { right: -100%; } }
     @-webkit-keyframes FinishedImg { from { right: 0%; } to { right: -100%; } }
     @keyframes FinishedImg { from { right: 0%; } to { right: -100%; } }
+  body.MinAnimations #SponsorBox>div.CurrentImg { right: 0%; animation: none; -moz-animation: none; -webkit-animation: none; }
+  body.MinAnimations #SponsorBox>div.FinishedImg { right: -100%; animation: none; -moz-animation: none; -webkit-animation: none; }
 
   #SponsorBox>div>img { width: 100%; height: 100%; }
 /* End Sponsor Banner box */
