--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -13,6 +13,7 @@
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/javascript/scoreboard.js"></script>
 		<link href="scoreboard.css" type="text/css" rel="stylesheet" />
+		<meta name="viewport" content="height = device-height, width = device-width, initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 1.0, user-scalable = no, target-densitydpi = device-dpi" />
 	</head>
 	<body>
 		<div id="mainDiv">
