Removed Passes, Added Star Pass (and pivot) to scoreboard controls

--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -90,8 +90,11 @@
 					</div>
 					<div class="Score WhiteBox"></div>
 					<div class="Score TextContainer"><a class="Score"></a></div>
-					<div class="Clock ShowJam Jammer TextContainer"><a class="Jammer"></a></div>
-					<div class="Clock ShowJam Lead TextContainer"><a class="Lead">Lead</a></div>
+					<div class="Clock ShowJam Jammer TextContainer">
+						<a class="Jammer"></a>
+						<a class="Pivot"></a>
+						<a class="Lead">Lead</a>
+					</div>
 				</div>
 				<div class="Team Team2">
 					<div class="NameLogo">
@@ -100,8 +103,11 @@
 					</div>
 					<div class="Score WhiteBox"></div>
 					<div class="Score TextContainer"><a class="Score"></a></div>
-					<div class="Clock ShowJam Jammer TextContainer"><a class="Jammer"></a></div>
-					<div class="Clock ShowJam Lead TextContainer"><a class="Lead">Lead</a></div>
+					<div class="Clock ShowJam Jammer TextContainer">
+						<a class="Jammer"></a>
+						<a class="Pivot"></a>
+						<a class="Lead">Lead</a>
+					</div>
 				</div>
 				<div class="Period Clock ShowJam">
 					<div class="Name WhiteBox FlatBottom FlatDark"></div>
