--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -75,7 +75,7 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
   #sbDiv>div.Team2>div.Jammer,#sbDiv>div.Team1.SwapTeams>div.Jammer           { left: 100%; right: auto; animation: JammerHideRight 0.5s; -moz-animation: JammerHideRight 0.5s; -webkit-animation: JammerHideRight 0.5s; }
   #sbDiv>div.Team2>div.Jammer.Show,#sbDiv>div.Team1.SwapTeams>div.Jammer.Show { left: 5%;   right: auto; animation: JammerShowRight 0.5s; -moz-animation: JammerShowRight 0.5s; -webkit-animation: JammerShowRight 0.5s; }
 
-  #sbDiv>div.Team>div.Jammer.LeadJammer>a { color: #FF0000; animation: LeadJammer 1s infinite; -moz-animation: LeadJammer 1s infinite; -webkit-animation: LeadJammer 1s infinite; }
+  #sbDiv>div.Team>div.Jammer.LeadJammer>a.Jammer { color: #FF0000; animation: LeadJammer 1s infinite; -moz-animation: LeadJammer 1s infinite; -webkit-animation: LeadJammer 1s infinite; }
     @-moz-keyframes LeadJammer         {  0% { color: #FF0000; } 50% { color: #FFFFFF; } 100% { color: #FF0000; } }
     @-webkit-keyframes LeadJammer      {  0% { color: #FF0000; } 50% { color: #FFFFFF; } 100% { color: #FF0000; } }
     @keyframes LeadJammer              {  0% { color: #FF0000; } 50% { color: #FFFFFF; } 100% { color: #FF0000; } }
@@ -94,13 +94,20 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
     @keyframes JammerHideRight         {  0% {  left:   5%; } 100% {  left: 100%; } }
     @keyframes JammerShowRight         {  0% {  left: 100%; } 100% {  left:   5%; } }
 
+  #sbDiv>div.Team>div.Jammer>a { display: none; }
+  #sbDiv>div.Team>div.Jammer.LeadJammer:not(.HaveJammer):not(.StarPass)>a.Lead { display: block; }
+  #sbDiv>div.Team>div.Jammer.HaveJammer:not(.StarPass)>a.Jammer { display: block; }
+  #sbDiv>div.Team>div.Jammer.HavePivot.StarPass>a.Pivot { display: block; }
+    
   /* Team Lead Jammer sub-box */
+    /*
   #sbDiv>div.Team>div.Lead { bottom: 0%; width: 90%; height: 18%; color: #FFFFFF; font-size: 10%; opacity: 1; }
   #sbDiv>div.Team>div.Lead.HaveJammer { opacity: 0; }
   #sbDiv>div.Team1>div.Lead,#sbDiv>div.Team2.SwapTeams>div.Lead                                 { left: auto; right: 100%; animation: JammerHideLeft 0.5s; -moz-animation: JammerHideLeft 0.5s; -webkit-animation: JammerHideLeft 0.5s; }
   #sbDiv>div.Team1>div.Lead.Show.LeadJammer,#sbDiv>div.Team2.SwapTeams>div.Lead.Show.LeadJammer { left: auto; right: 5%;   animation: JammerShowLeft 0.5s; -moz-animation: JammerShowLeft 0.5s; -webkit-animation: JammerShowLeft 0.5s; }
   #sbDiv>div.Team2>div.Lead,#sbDiv>div.Team1.SwapTeams>div.Lead                                 { left: 100%; right: auto; animation: JammerHideRight 0.5s; -moz-animation: JammerHideRight 0.5s; -webkit-animation: JammerHideRight 0.5s; }
   #sbDiv>div.Team2>div.Lead.Show.LeadJammer,#sbDiv>div.Team1.SwapTeams>div.Lead.Show.LeadJammer { left:   5%; right: auto; animation: JammerShowRight 0.5s; -moz-animation: JammerShowRight 0.5s; -webkit-animation: JammerShowRight 0.5s; }
+    */
 /* End Teams */
 
 /* Jam Points */
