Fixed autofit on jammer / lead text on scoreboard

--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -90,10 +90,10 @@
 					</div>
 					<div class="Score WhiteBox"></div>
 					<div class="Score TextContainer"><a class="Score"></a></div>
-					<div class="Clock ShowJam Jammer TextContainer">
-						<a class="Jammer"></a>
-						<a class="Pivot"></a>
-						<a class="Lead">Lead</a>
+					<div class="Clock ShowJam JammerBox TextContainer">
+						<div class="Jammer"><a></a></div>
+						<div class="Pivot"><a></a></div>
+						<div class="Lead"><a>Lead</a></div>
 					</div>
 				</div>
 				<div class="Team Team2">
@@ -103,10 +103,10 @@
 					</div>
 					<div class="Score WhiteBox"></div>
 					<div class="Score TextContainer"><a class="Score"></a></div>
-					<div class="Clock ShowJam Jammer TextContainer">
-						<a class="Jammer"></a>
-						<a class="Pivot"></a>
-						<a class="Lead">Lead</a>
+					<div class="Clock ShowJam JammerBox TextContainer">
+						<div class="Jammer"><a></a></div>
+						<div class="Pivot"><a></a></div>
+						<div class="Lead">Lead</div>
 					</div>
 				</div>
 				<div class="Period Clock ShowJam">
