Add Penalty Box controls to the operator controls (Jammer and Pivot only)

--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -69,6 +69,9 @@ table.RowTable { border-spacing: 0px; }
 	#TeamTime table.Team tr.Jammer td.ui-buttonset label.Lead.ui-state-active { background: #3f3; }
 	#TeamTime table.Team tr.Jammer td.ui-buttonset label.StarPass.ui-state-active { background: #3f3; }
 
+	#TeamTime table.Team tr.Jammer button.Box { font-size: 80%; }
+	#TeamTime table.Team tr.Jammer button.Box.Active { color: #000; background: #F33; }
+
 	#TeamTime table.Team tr.Pass td.Pass a { font-size: 150%; }
 
 	#TeamTime table.Time>tbody>tr>td { width: 20%; }
