Fixed font on team 2 lead

--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -106,7 +106,7 @@
 					<div class="Clock ShowJam JammerBox TextContainer">
 						<div class="Jammer"><a></a></div>
 						<div class="Pivot"><a></a></div>
-						<div class="Lead">Lead</div>
+						<div class="Lead"><a>Lead</a></div>
 					</div>
 				</div>
 				<div class="Period Clock ShowJam">
